styling improvements